// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Fixtures > should match snapshot of fibonacci.asm 1`] = `
{
  "data": [
    {
      "directive": "DB",
      "label": "INICIO",
      "position": [
        266,
        270,
      ],
      "start": 4096,
      "type": "data-directive",
      "values": [
        1,
      ],
    },
  ],
  "instructions": [
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        299,
        324,
      ],
      "size": 16,
      "src": 4097,
      "start": 8192,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        333,
        342,
      ],
      "size": 8,
      "src": 0,
      "start": 8196,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "AH",
      "position": [
        351,
        365,
      ],
      "size": 8,
      "src": {
        "address": 4096,
        "mode": "direct",
      },
      "start": 8199,
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": "BUCLE",
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        376,
        401,
      ],
      "size": 16,
      "src": 4106,
      "start": 8203,
      "type": "instruction",
    },
    {
      "address": 8225,
      "instruction": "JNS",
      "label": null,
      "position": [
        410,
        417,
      ],
      "start": 8207,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-reg",
      "out": "CL",
      "position": [
        426,
        436,
      ],
      "size": 8,
      "src": "AH",
      "start": 8210,
      "type": "instruction",
    },
    {
      "instruction": "ADD",
      "label": null,
      "mode": "reg<-reg",
      "out": "CL",
      "position": [
        445,
        455,
      ],
      "size": 8,
      "src": "AL",
      "start": 8212,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-reg",
      "out": "AL",
      "position": [
        464,
        474,
      ],
      "size": 8,
      "src": "AH",
      "start": 8214,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-reg",
      "out": "AH",
      "position": [
        483,
        493,
      ],
      "size": 8,
      "src": "CL",
      "start": 8216,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "mem<-reg",
      "out": {
        "mode": "indirect",
      },
      "position": [
        502,
        514,
      ],
      "size": 8,
      "src": "CL",
      "start": 8218,
      "type": "instruction",
    },
    {
      "instruction": "INC",
      "label": null,
      "mode": "reg",
      "position": [
        523,
        529,
      ],
      "reg": "BX",
      "size": 16,
      "start": 8220,
      "type": "instruction",
    },
    {
      "address": 8203,
      "instruction": "JMP",
      "label": null,
      "position": [
        538,
        547,
      ],
      "start": 8222,
      "type": "instruction",
    },
    {
      "instruction": "HLT",
      "label": "FIN",
      "position": [
        556,
        559,
      ],
      "start": 8225,
      "type": "instruction",
    },
  ],
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of multiplicar.asm 1`] = `
{
  "data": [
    {
      "directive": "DW",
      "label": "A",
      "position": [
        33,
        38,
      ],
      "start": 4096,
      "type": "data-directive",
      "values": [
        25,
      ],
    },
    {
      "directive": "DW",
      "label": "B",
      "position": [
        52,
        56,
      ],
      "start": 4098,
      "type": "data-directive",
      "values": [
        4,
      ],
    },
    {
      "directive": "DW",
      "label": "RES",
      "position": [
        72,
        76,
      ],
      "start": 4100,
      "type": "data-directive",
      "values": [
        "?",
      ],
    },
  ],
  "instructions": [
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AX",
      "position": [
        111,
        120,
      ],
      "size": 16,
      "src": 0,
      "start": 8192,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "BX",
      "position": [
        132,
        141,
      ],
      "size": 16,
      "src": {
        "address": 4098,
        "mode": "direct",
      },
      "start": 8196,
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        153,
        162,
      ],
      "size": 16,
      "src": 0,
      "start": 8200,
      "type": "instruction",
    },
    {
      "address": 8218,
      "instruction": "JZ",
      "label": null,
      "position": [
        174,
        180,
      ],
      "start": 8204,
      "type": "instruction",
    },
    {
      "instruction": "ADD",
      "label": "SUMAR",
      "mode": "reg<-mem",
      "out": "AX",
      "position": [
        192,
        200,
      ],
      "size": 16,
      "src": {
        "address": 4096,
        "mode": "direct",
      },
      "start": 8207,
      "type": "instruction",
    },
    {
      "address": 4098,
      "instruction": "DEC",
      "label": null,
      "mode": "mem-direct",
      "position": [
        212,
        217,
      ],
      "size": 16,
      "start": 8211,
      "type": "instruction",
    },
    {
      "address": 8207,
      "instruction": "JNZ",
      "label": null,
      "position": [
        229,
        238,
      ],
      "start": 8215,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": "FIN",
      "mode": "mem<-reg",
      "out": {
        "address": 4100,
        "mode": "direct",
      },
      "position": [
        250,
        261,
      ],
      "size": 16,
      "src": "AX",
      "start": 8218,
      "type": "instruction",
    },
    {
      "instruction": "HLT",
      "label": null,
      "position": [
        273,
        276,
      ],
      "start": 8222,
      "type": "instruction",
    },
  ],
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of parcial.asm 1`] = `
{
  "data": [
    {
      "directive": "DB",
      "label": "NOMBRE",
      "position": [
        56,
        78,
      ],
      "start": 4096,
      "type": "data-directive",
      "values": [
        74,
        117,
        97,
        110,
        76,
        111,
        114,
        101,
        110,
        122,
        111,
        77,
        97,
        114,
        116,
        105,
        110,
      ],
    },
    {
      "directive": "DB",
      "label": "FIN_NOMBRE",
      "position": [
        110,
        116,
      ],
      "start": 4113,
      "type": "data-directive",
      "values": [
        0,
      ],
    },
    {
      "directive": "DB",
      "label": "VOCALES",
      "position": [
        145,
        160,
      ],
      "start": 4114,
      "type": "data-directive",
      "values": [
        65,
        69,
        73,
        79,
        85,
        97,
        101,
        105,
        111,
        117,
      ],
    },
    {
      "directive": "DB",
      "label": "FIN_VOCALES",
      "position": [
        193,
        199,
      ],
      "start": 4124,
      "type": "data-directive",
      "values": [
        0,
      ],
    },
    {
      "directive": "DB",
      "label": "CANTIDAD_VOCALES",
      "position": [
        237,
        241,
      ],
      "start": 4125,
      "type": "data-directive",
      "values": [
        0,
      ],
    },
  ],
  "instructions": [
    {
      "instruction": "PUSH",
      "label": "SWAP",
      "position": [
        411,
        418,
      ],
      "register": "AX",
      "start": 12288,
      "type": "instruction",
    },
    {
      "instruction": "PUSH",
      "label": null,
      "position": [
        439,
        446,
      ],
      "register": "BX",
      "start": 12289,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-reg",
      "out": "BX",
      "position": [
        467,
        477,
      ],
      "size": 16,
      "src": "CX",
      "start": 12290,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "AL",
      "position": [
        498,
        510,
      ],
      "size": 8,
      "src": {
        "mode": "indirect",
      },
      "start": 12292,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-reg",
      "out": "BX",
      "position": [
        552,
        562,
      ],
      "size": 16,
      "src": "DX",
      "start": 12294,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "AH",
      "position": [
        583,
        595,
      ],
      "size": 8,
      "src": {
        "mode": "indirect",
      },
      "start": 12296,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "mem<-reg",
      "out": {
        "mode": "indirect",
      },
      "position": [
        638,
        650,
      ],
      "size": 8,
      "src": "AL",
      "start": 12298,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-reg",
      "out": "BX",
      "position": [
        709,
        719,
      ],
      "size": 16,
      "src": "CX",
      "start": 12300,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "mem<-reg",
      "out": {
        "mode": "indirect",
      },
      "position": [
        740,
        752,
      ],
      "size": 8,
      "src": "AH",
      "start": 12302,
      "type": "instruction",
    },
    {
      "instruction": "POP",
      "label": null,
      "position": [
        812,
        818,
      ],
      "register": "BX",
      "start": 12304,
      "type": "instruction",
    },
    {
      "instruction": "POP",
      "label": null,
      "position": [
        839,
        845,
      ],
      "register": "AX",
      "start": 12305,
      "type": "instruction",
    },
    {
      "instruction": "RET",
      "label": null,
      "position": [
        866,
        869,
      ],
      "start": 12306,
      "type": "instruction",
    },
    {
      "instruction": "PUSH",
      "label": "ES_VOCAL",
      "position": [
        999,
        1006,
      ],
      "register": "BX",
      "start": 12307,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-reg",
      "out": "BX",
      "position": [
        1027,
        1037,
      ],
      "size": 16,
      "src": "SP",
      "start": 12308,
      "type": "instruction",
    },
    {
      "instruction": "ADD",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        1058,
        1071,
      ],
      "size": 16,
      "src": 4,
      "start": 12310,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "AL",
      "position": [
        1092,
        1104,
      ],
      "size": 8,
      "src": {
        "mode": "indirect",
      },
      "start": 12314,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        1142,
        1168,
      ],
      "size": 16,
      "src": 4113,
      "start": 12316,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AH",
      "position": [
        1189,
        1200,
      ],
      "size": 8,
      "src": 0,
      "start": 12320,
      "type": "instruction",
    },
    {
      "instruction": "INC",
      "label": "ES_VOCAL_LOOP",
      "mode": "reg",
      "position": [
        1221,
        1227,
      ],
      "reg": "BX",
      "size": 16,
      "start": 12323,
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        1248,
        1274,
      ],
      "size": 16,
      "src": 4124,
      "start": 12325,
      "type": "instruction",
    },
    {
      "address": 12340,
      "instruction": "JZ",
      "label": null,
      "position": [
        1295,
        1310,
      ],
      "start": 12329,
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-mem",
      "out": "AL",
      "position": [
        1331,
        1343,
      ],
      "size": 8,
      "src": {
        "mode": "indirect",
      },
      "start": 12332,
      "type": "instruction",
    },
    {
      "address": 12323,
      "instruction": "JNZ",
      "label": null,
      "position": [
        1364,
        1381,
      ],
      "start": 12334,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AH",
      "position": [
        1402,
        1414,
      ],
      "size": 8,
      "src": 255,
      "start": 12337,
      "type": "instruction",
    },
    {
      "instruction": "POP",
      "label": "ES_VOCAL_FIN",
      "position": [
        1435,
        1441,
      ],
      "register": "BX",
      "start": 12340,
      "type": "instruction",
    },
    {
      "instruction": "RET",
      "label": null,
      "position": [
        1462,
        1465,
      ],
      "start": 12341,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "CX",
      "position": [
        1749,
        1770,
      ],
      "size": 16,
      "src": 4096,
      "start": 8192,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "DX",
      "position": [
        1791,
        1820,
      ],
      "size": 16,
      "src": 4112,
      "start": 8196,
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": "MAIN_LOOP",
      "mode": "reg<-reg",
      "out": "DX",
      "position": [
        1841,
        1851,
      ],
      "size": 16,
      "src": "CX",
      "start": 8200,
      "type": "instruction",
    },
    {
      "address": 8264,
      "instruction": "JS",
      "label": null,
      "position": [
        1872,
        1883,
      ],
      "start": 8202,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-reg",
      "out": "BX",
      "position": [
        2003,
        2013,
      ],
      "size": 16,
      "src": "CX",
      "start": 8205,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "AL",
      "position": [
        2034,
        2046,
      ],
      "size": 8,
      "src": {
        "mode": "indirect",
      },
      "start": 8207,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AH",
      "position": [
        2067,
        2077,
      ],
      "size": 8,
      "src": 0,
      "start": 8209,
      "type": "instruction",
    },
    {
      "instruction": "PUSH",
      "label": null,
      "position": [
        2098,
        2105,
      ],
      "register": "AX",
      "start": 8212,
      "type": "instruction",
    },
    {
      "address": 12307,
      "instruction": "CALL",
      "label": null,
      "position": [
        2126,
        2139,
      ],
      "start": 8213,
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-imd",
      "out": "AH",
      "position": [
        2160,
        2169,
      ],
      "size": 8,
      "src": 0,
      "start": 8216,
      "type": "instruction",
    },
    {
      "address": 8226,
      "instruction": "JZ",
      "label": null,
      "position": [
        2190,
        2204,
      ],
      "start": 8219,
      "type": "instruction",
    },
    {
      "address": 4125,
      "instruction": "INC",
      "label": null,
      "mode": "mem-direct",
      "position": [
        2225,
        2245,
      ],
      "size": 8,
      "start": 8222,
      "type": "instruction",
    },
    {
      "instruction": "POP",
      "label": "NO_CONTAR_1",
      "position": [
        2266,
        2272,
      ],
      "register": "AX",
      "start": 8226,
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-reg",
      "out": "DX",
      "position": [
        2361,
        2371,
      ],
      "size": 16,
      "src": "CX",
      "start": 8227,
      "type": "instruction",
    },
    {
      "address": 8264,
      "instruction": "JZ",
      "label": null,
      "position": [
        2392,
        2403,
      ],
      "start": 8229,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-reg",
      "out": "BX",
      "position": [
        2523,
        2533,
      ],
      "size": 16,
      "src": "DX",
      "start": 8232,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "AL",
      "position": [
        2554,
        2566,
      ],
      "size": 8,
      "src": {
        "mode": "indirect",
      },
      "start": 8234,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AH",
      "position": [
        2587,
        2596,
      ],
      "size": 8,
      "src": 0,
      "start": 8236,
      "type": "instruction",
    },
    {
      "instruction": "PUSH",
      "label": null,
      "position": [
        2617,
        2624,
      ],
      "register": "AX",
      "start": 8239,
      "type": "instruction",
    },
    {
      "address": 12307,
      "instruction": "CALL",
      "label": null,
      "position": [
        2645,
        2658,
      ],
      "start": 8240,
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-imd",
      "out": "AH",
      "position": [
        2679,
        2688,
      ],
      "size": 8,
      "src": 0,
      "start": 8243,
      "type": "instruction",
    },
    {
      "address": 8253,
      "instruction": "JZ",
      "label": null,
      "position": [
        2709,
        2723,
      ],
      "start": 8246,
      "type": "instruction",
    },
    {
      "address": 4125,
      "instruction": "INC",
      "label": null,
      "mode": "mem-direct",
      "position": [
        2744,
        2764,
      ],
      "size": 8,
      "start": 8249,
      "type": "instruction",
    },
    {
      "instruction": "POP",
      "label": "NO_CONTAR_2",
      "position": [
        2785,
        2791,
      ],
      "register": "AX",
      "start": 8253,
      "type": "instruction",
    },
    {
      "address": 12288,
      "instruction": "CALL",
      "label": null,
      "position": [
        2842,
        2851,
      ],
      "start": 8254,
      "type": "instruction",
    },
    {
      "instruction": "INC",
      "label": null,
      "mode": "reg",
      "position": [
        2872,
        2878,
      ],
      "reg": "CX",
      "size": 16,
      "start": 8257,
      "type": "instruction",
    },
    {
      "instruction": "DEC",
      "label": null,
      "mode": "reg",
      "position": [
        2899,
        2905,
      ],
      "reg": "DX",
      "size": 16,
      "start": 8259,
      "type": "instruction",
    },
    {
      "address": 8200,
      "instruction": "JMP",
      "label": null,
      "position": [
        2926,
        2939,
      ],
      "start": 8261,
      "type": "instruction",
    },
    {
      "instruction": "HLT",
      "label": "LOOP_FIN",
      "position": [
        2960,
        2963,
      ],
      "start": 8264,
      "type": "instruction",
    },
  ],
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of resto.asm 1`] = `
{
  "data": [
    {
      "directive": "DW",
      "label": "N",
      "position": [
        35,
        41,
      ],
      "start": 4096,
      "type": "data-directive",
      "values": [
        255,
      ],
    },
    {
      "directive": "DW",
      "label": "M",
      "position": [
        56,
        60,
      ],
      "start": 4098,
      "type": "data-directive",
      "values": [
        2,
      ],
    },
    {
      "directive": "DW",
      "label": "R",
      "position": [
        75,
        79,
      ],
      "start": 4100,
      "type": "data-directive",
      "values": [
        "?",
      ],
    },
  ],
  "instructions": [
    {
      "instruction": "CMP",
      "label": "RESTO",
      "mode": "reg<-reg",
      "out": "AX",
      "position": [
        247,
        256,
      ],
      "size": 16,
      "src": "BX",
      "start": 12288,
      "type": "instruction",
    },
    {
      "address": 12298,
      "instruction": "JS",
      "label": null,
      "position": [
        269,
        279,
      ],
      "start": 12290,
      "type": "instruction",
    },
    {
      "instruction": "SUB",
      "label": null,
      "mode": "reg<-reg",
      "out": "AX",
      "position": [
        294,
        303,
      ],
      "size": 16,
      "src": "BX",
      "start": 12293,
      "type": "instruction",
    },
    {
      "address": 12288,
      "instruction": "JMP",
      "label": null,
      "position": [
        316,
        325,
      ],
      "start": 12295,
      "type": "instruction",
    },
    {
      "instruction": "RET",
      "label": "RETORNO",
      "position": [
        340,
        343,
      ],
      "start": 12298,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "AX",
      "position": [
        380,
        389,
      ],
      "size": 16,
      "src": {
        "address": 4096,
        "mode": "direct",
      },
      "start": 8192,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "BX",
      "position": [
        402,
        411,
      ],
      "size": 16,
      "src": {
        "address": 4098,
        "mode": "direct",
      },
      "start": 8196,
      "type": "instruction",
    },
    {
      "address": 12288,
      "instruction": "CALL",
      "label": null,
      "position": [
        424,
        434,
      ],
      "start": 8200,
      "type": "instruction",
    },
    {
      "instruction": "HLT",
      "label": null,
      "position": [
        447,
        450,
      ],
      "start": 8203,
      "type": "instruction",
    },
  ],
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of rotar.asm 1`] = `
{
  "data": [
    {
      "directive": "DW",
      "label": "NUMEROBINARIO",
      "position": [
        25,
        45,
      ],
      "start": 4096,
      "type": "data-directive",
      "values": [
        32933,
      ],
    },
    {
      "directive": "DW",
      "label": "CANTROTACIONES",
      "position": [
        62,
        66,
      ],
      "start": 4098,
      "type": "data-directive",
      "values": [
        3,
      ],
    },
  ],
  "instructions": [
    {
      "instruction": "DEC",
      "label": "ROTARIZQ",
      "mode": "reg",
      "position": [
        209,
        215,
      ],
      "reg": "CX",
      "size": 16,
      "start": 12288,
      "type": "instruction",
    },
    {
      "address": 12303,
      "instruction": "JS",
      "label": null,
      "position": [
        232,
        247,
      ],
      "start": 12290,
      "type": "instruction",
    },
    {
      "instruction": "ADD",
      "label": null,
      "mode": "reg<-reg",
      "out": "AX",
      "position": [
        264,
        273,
      ],
      "size": 16,
      "src": "AX",
      "start": 12293,
      "type": "instruction",
    },
    {
      "address": 12288,
      "instruction": "JNC",
      "label": null,
      "position": [
        290,
        302,
      ],
      "start": 12295,
      "type": "instruction",
    },
    {
      "instruction": "INC",
      "label": null,
      "mode": "reg",
      "position": [
        319,
        325,
      ],
      "reg": "AX",
      "size": 16,
      "start": 12298,
      "type": "instruction",
    },
    {
      "address": 12288,
      "instruction": "JMP",
      "label": null,
      "position": [
        342,
        354,
      ],
      "start": 12300,
      "type": "instruction",
    },
    {
      "instruction": "RET",
      "label": "ROTARIZQ_FIN",
      "position": [
        371,
        374,
      ],
      "start": 12303,
      "type": "instruction",
    },
    {
      "instruction": "SUB",
      "label": "ROTARDER",
      "mode": "reg<-imd",
      "out": "CX",
      "position": [
        504,
        514,
      ],
      "size": 16,
      "src": 16,
      "start": 12304,
      "type": "instruction",
    },
    {
      "instruction": "NEG",
      "label": null,
      "mode": "reg",
      "position": [
        531,
        537,
      ],
      "reg": "CX",
      "size": 16,
      "start": 12308,
      "type": "instruction",
    },
    {
      "address": 12288,
      "instruction": "JMP",
      "label": null,
      "position": [
        554,
        566,
      ],
      "start": 12310,
      "type": "instruction",
    },
    {
      "instruction": "RET",
      "label": null,
      "position": [
        583,
        586,
      ],
      "start": 12313,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "AX",
      "position": [
        605,
        626,
      ],
      "size": 16,
      "src": {
        "address": 4096,
        "mode": "direct",
      },
      "start": 8192,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "CX",
      "position": [
        628,
        650,
      ],
      "size": 16,
      "src": {
        "address": 4098,
        "mode": "direct",
      },
      "start": 8196,
      "type": "instruction",
    },
    {
      "address": 12304,
      "instruction": "CALL",
      "label": null,
      "position": [
        652,
        665,
      ],
      "start": 8200,
      "type": "instruction",
    },
    {
      "instruction": "HLT",
      "label": null,
      "position": [
        667,
        670,
      ],
      "start": 8203,
      "type": "instruction",
    },
  ],
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of sumador_de_tablas.asm 1`] = `
{
  "data": [
    {
      "directive": "DW",
      "label": "A",
      "position": [
        54,
        73,
      ],
      "start": 4096,
      "type": "data-directive",
      "values": [
        25,
        4,
        77,
        32,
        6,
      ],
    },
    {
      "directive": "DW",
      "label": "B",
      "position": [
        87,
        106,
      ],
      "start": 4106,
      "type": "data-directive",
      "values": [
        4,
        89,
        32,
        55,
        1,
      ],
    },
    {
      "directive": "DW",
      "label": "RES",
      "position": [
        122,
        138,
      ],
      "start": 4116,
      "type": "data-directive",
      "values": [
        "?",
        "?",
        "?",
        "?",
        "?",
      ],
    },
  ],
  "instructions": [
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "CX",
      "position": [
        173,
        184,
      ],
      "size": 16,
      "src": 5,
      "start": 8192,
      "type": "instruction",
    },
    {
      "instruction": "ADD",
      "label": null,
      "mode": "reg<-imd",
      "out": "CX",
      "position": [
        210,
        221,
      ],
      "size": 16,
      "src": 5,
      "start": 8196,
      "type": "instruction",
    },
    {
      "instruction": "SUB",
      "label": null,
      "mode": "reg<-imd",
      "out": "CX",
      "position": [
        233,
        242,
      ],
      "size": 16,
      "src": 2,
      "start": 8200,
      "type": "instruction",
    },
    {
      "address": 8241,
      "instruction": "JS",
      "label": null,
      "position": [
        254,
        260,
      ],
      "start": 8204,
      "type": "instruction",
    },
    {
      "address": 8241,
      "instruction": "JZ",
      "label": null,
      "position": [
        272,
        278,
      ],
      "start": 8207,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": "SUMA",
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        290,
        306,
      ],
      "size": 16,
      "src": 4096,
      "start": 8210,
      "type": "instruction",
    },
    {
      "instruction": "ADD",
      "label": null,
      "mode": "reg<-reg",
      "out": "BX",
      "position": [
        318,
        328,
      ],
      "size": 16,
      "src": "CX",
      "start": 8214,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "AX",
      "position": [
        340,
        352,
      ],
      "size": 16,
      "src": {
        "mode": "indirect",
      },
      "start": 8216,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        364,
        380,
      ],
      "size": 16,
      "src": 4106,
      "start": 8218,
      "type": "instruction",
    },
    {
      "instruction": "ADD",
      "label": null,
      "mode": "reg<-reg",
      "out": "BX",
      "position": [
        392,
        402,
      ],
      "size": 16,
      "src": "CX",
      "start": 8222,
      "type": "instruction",
    },
    {
      "instruction": "ADD",
      "label": null,
      "mode": "reg<-mem",
      "out": "AX",
      "position": [
        414,
        426,
      ],
      "size": 16,
      "src": {
        "mode": "indirect",
      },
      "start": 8224,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        438,
        456,
      ],
      "size": 16,
      "src": 4116,
      "start": 8226,
      "type": "instruction",
    },
    {
      "instruction": "ADD",
      "label": null,
      "mode": "reg<-reg",
      "out": "BX",
      "position": [
        468,
        478,
      ],
      "size": 16,
      "src": "CX",
      "start": 8230,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "mem<-reg",
      "out": {
        "mode": "indirect",
      },
      "position": [
        490,
        502,
      ],
      "size": 16,
      "src": "AX",
      "start": 8232,
      "type": "instruction",
    },
    {
      "instruction": "SUB",
      "label": null,
      "mode": "reg<-imd",
      "out": "CX",
      "position": [
        514,
        523,
      ],
      "size": 16,
      "src": 2,
      "start": 8234,
      "type": "instruction",
    },
    {
      "address": 8210,
      "instruction": "JNS",
      "label": null,
      "position": [
        535,
        543,
      ],
      "start": 8238,
      "type": "instruction",
    },
    {
      "instruction": "HLT",
      "label": "FIN",
      "position": [
        555,
        558,
      ],
      "start": 8241,
      "type": "instruction",
    },
  ],
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of timer.asm 1`] = `
{
  "data": [
    {
      "directive": "DW",
      "label": null,
      "position": [
        415,
        428,
      ],
      "start": 40,
      "type": "data-directive",
      "values": [
        12312,
      ],
    },
    {
      "directive": "DW",
      "label": null,
      "position": [
        475,
        488,
      ],
      "start": 44,
      "type": "data-directive",
      "values": [
        12332,
      ],
    },
    {
      "directive": "DB",
      "label": "INPUT_MSJ",
      "position": [
        525,
        566,
      ],
      "start": 4096,
      "type": "data-directive",
      "values": [
        12,
        73,
        110,
        103,
        114,
        101,
        115,
        101,
        32,
        117,
        110,
        32,
        116,
        105,
        101,
        109,
        112,
        111,
        32,
        40,
        109,
        225,
        120,
        32,
        57,
        57,
        32,
        115,
        101,
        103,
        41,
        58,
        32,
      ],
    },
    {
      "directive": "DB",
      "label": "ERR_MSJ",
      "position": [
        578,
        602,
      ],
      "start": 4129,
      "type": "data-directive",
      "values": [
        10,
        78,
        250,
        109,
        101,
        114,
        111,
        32,
        105,
        110,
        118,
        225,
        108,
        105,
        100,
        111,
      ],
    },
    {
      "directive": "DB",
      "label": "DISP",
      "position": [
        616,
        623,
      ],
      "start": 4145,
      "type": "data-directive",
      "values": [
        8,
        8,
      ],
    },
    {
      "directive": "DB",
      "label": "SEG_H",
      "position": [
        650,
        656,
      ],
      "start": 4147,
      "type": "data-directive",
      "values": [
        48,
      ],
    },
    {
      "directive": "DB",
      "label": "SEG_L",
      "position": [
        668,
        674,
      ],
      "start": 4148,
      "type": "data-directive",
      "values": [
        48,
      ],
    },
    {
      "directive": "DB",
      "label": "COUNT",
      "position": [
        686,
        692,
      ],
      "start": 4149,
      "type": "data-directive",
      "values": [
        0,
      ],
    },
  ],
  "instructions": [
    {
      "instruction": "MOV",
      "label": "ES_NUM",
      "mode": "reg<-mem",
      "out": "AL",
      "position": [
        1072,
        1084,
      ],
      "size": 8,
      "src": {
        "mode": "indirect",
      },
      "start": 12288,
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        1102,
        1113,
      ],
      "size": 8,
      "src": 48,
      "start": 12290,
      "type": "instruction",
    },
    {
      "address": 12308,
      "instruction": "JS",
      "label": null,
      "position": [
        1131,
        1142,
      ],
      "start": 12293,
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        1160,
        1173,
      ],
      "size": 8,
      "src": 58,
      "start": 12296,
      "type": "instruction",
    },
    {
      "address": 12308,
      "instruction": "JNS",
      "label": null,
      "position": [
        1191,
        1203,
      ],
      "start": 12299,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        1221,
        1233,
      ],
      "size": 8,
      "src": 255,
      "start": 12302,
      "type": "instruction",
    },
    {
      "address": 12311,
      "instruction": "JMP",
      "label": null,
      "position": [
        1251,
        1265,
      ],
      "start": 12305,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": "ES_NUM_F",
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        1283,
        1294,
      ],
      "size": 8,
      "src": 0,
      "start": 12308,
      "type": "instruction",
    },
    {
      "instruction": "RET",
      "label": "ES_NUM_RET",
      "position": [
        1312,
        1315,
      ],
      "start": 12311,
      "type": "instruction",
    },
    {
      "instruction": "PUSH",
      "label": "HANDLE_F10",
      "position": [
        1433,
        1440,
      ],
      "register": "AX",
      "start": 12312,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "mem<-imd",
      "out": {
        "address": 4149,
        "mode": "direct",
      },
      "position": [
        1458,
        1473,
      ],
      "size": 8,
      "src": 255,
      "start": 12313,
      "type": "instruction",
    },
    {
      "address": 33,
      "instruction": "IN",
      "label": null,
      "port": "fixed",
      "position": [
        1491,
        1501,
      ],
      "size": 8,
      "start": 12318,
      "type": "instruction",
    },
    {
      "instruction": "XOR",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        1519,
        1536,
      ],
      "size": 8,
      "src": 1,
      "start": 12320,
      "type": "instruction",
    },
    {
      "address": 33,
      "instruction": "OUT",
      "label": null,
      "port": "fixed",
      "position": [
        1554,
        1565,
      ],
      "size": 8,
      "start": 12323,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        1583,
        1594,
      ],
      "size": 8,
      "src": 32,
      "start": 12325,
      "type": "instruction",
    },
    {
      "address": 32,
      "instruction": "OUT",
      "label": null,
      "port": "fixed",
      "position": [
        1612,
        1623,
      ],
      "size": 8,
      "start": 12328,
      "type": "instruction",
    },
    {
      "instruction": "POP",
      "label": null,
      "position": [
        1641,
        1647,
      ],
      "register": "AX",
      "start": 12330,
      "type": "instruction",
    },
    {
      "instruction": "IRET",
      "label": null,
      "position": [
        1665,
        1669,
      ],
      "start": 12331,
      "type": "instruction",
    },
    {
      "instruction": "PUSH",
      "label": "HANDLE_CLK",
      "position": [
        1807,
        1814,
      ],
      "register": "AX",
      "start": 12332,
      "type": "instruction",
    },
    {
      "instruction": "PUSH",
      "label": null,
      "position": [
        1832,
        1839,
      ],
      "register": "BX",
      "start": 12333,
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "mem<-imd",
      "out": {
        "address": 4149,
        "mode": "direct",
      },
      "position": [
        1857,
        1869,
      ],
      "size": 8,
      "src": 0,
      "start": 12334,
      "type": "instruction",
    },
    {
      "address": 12363,
      "instruction": "JZ",
      "label": null,
      "position": [
        1887,
        1904,
      ],
      "start": 12339,
      "type": "instruction",
    },
    {
      "address": 4148,
      "instruction": "DEC",
      "label": null,
      "mode": "mem-direct",
      "position": [
        1950,
        1959,
      ],
      "size": 8,
      "start": 12342,
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "mem<-imd",
      "out": {
        "address": 4148,
        "mode": "direct",
      },
      "position": [
        1977,
        1991,
      ],
      "size": 8,
      "src": 48,
      "start": 12346,
      "type": "instruction",
    },
    {
      "address": 12363,
      "instruction": "JNS",
      "label": null,
      "position": [
        2009,
        2027,
      ],
      "start": 12351,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "mem<-imd",
      "out": {
        "address": 4148,
        "mode": "direct",
      },
      "position": [
        2045,
        2059,
      ],
      "size": 8,
      "src": 57,
      "start": 12354,
      "type": "instruction",
    },
    {
      "address": 4147,
      "instruction": "DEC",
      "label": null,
      "mode": "mem-direct",
      "position": [
        2077,
        2086,
      ],
      "size": 8,
      "start": 12359,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": "HANDLE_CLK_END",
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        2104,
        2123,
      ],
      "size": 16,
      "src": 4145,
      "start": 12363,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        2141,
        2157,
      ],
      "size": 8,
      "src": 4,
      "start": 12367,
      "type": "instruction",
    },
    {
      "instruction": "INT",
      "label": null,
      "position": [
        2175,
        2180,
      ],
      "start": 12370,
      "type": "instruction",
      "value": 7,
    },
    {
      "address": 17,
      "instruction": "IN",
      "label": null,
      "port": "fixed",
      "position": [
        2198,
        2209,
      ],
      "size": 8,
      "start": 12372,
      "type": "instruction",
    },
    {
      "instruction": "INC",
      "label": null,
      "mode": "reg",
      "position": [
        2241,
        2247,
      ],
      "reg": "AL",
      "size": 8,
      "start": 12374,
      "type": "instruction",
    },
    {
      "address": 17,
      "instruction": "OUT",
      "label": null,
      "port": "fixed",
      "position": [
        2265,
        2277,
      ],
      "size": 8,
      "start": 12376,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        2295,
        2306,
      ],
      "size": 8,
      "src": 32,
      "start": 12378,
      "type": "instruction",
    },
    {
      "address": 32,
      "instruction": "OUT",
      "label": null,
      "port": "fixed",
      "position": [
        2324,
        2335,
      ],
      "size": 8,
      "start": 12381,
      "type": "instruction",
    },
    {
      "instruction": "POP",
      "label": null,
      "position": [
        2353,
        2359,
      ],
      "register": "BX",
      "start": 12383,
      "type": "instruction",
    },
    {
      "instruction": "POP",
      "label": null,
      "position": [
        2377,
        2383,
      ],
      "register": "AX",
      "start": 12384,
      "type": "instruction",
    },
    {
      "instruction": "IRET",
      "label": null,
      "position": [
        2401,
        2405,
      ],
      "start": 12385,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        2438,
        2462,
      ],
      "size": 16,
      "src": 4096,
      "start": 8192,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        2472,
        2489,
      ],
      "size": 8,
      "src": 33,
      "start": 8196,
      "type": "instruction",
    },
    {
      "instruction": "INT",
      "label": null,
      "position": [
        2499,
        2504,
      ],
      "start": 8199,
      "type": "instruction",
      "value": 7,
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        2514,
        2534,
      ],
      "size": 16,
      "src": 4147,
      "start": 8201,
      "type": "instruction",
    },
    {
      "instruction": "INT",
      "label": null,
      "position": [
        2544,
        2549,
      ],
      "start": 8205,
      "type": "instruction",
      "value": 6,
    },
    {
      "address": 12288,
      "instruction": "CALL",
      "label": null,
      "position": [
        2559,
        2570,
      ],
      "start": 8207,
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        2580,
        2591,
      ],
      "size": 8,
      "src": 0,
      "start": 8210,
      "type": "instruction",
    },
    {
      "address": 8277,
      "instruction": "JZ",
      "label": null,
      "position": [
        2601,
        2609,
      ],
      "start": 8213,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        2619,
        2639,
      ],
      "size": 16,
      "src": 4148,
      "start": 8216,
      "type": "instruction",
    },
    {
      "instruction": "INT",
      "label": null,
      "position": [
        2649,
        2654,
      ],
      "start": 8220,
      "type": "instruction",
      "value": 6,
    },
    {
      "address": 12288,
      "instruction": "CALL",
      "label": null,
      "position": [
        2664,
        2675,
      ],
      "start": 8222,
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        2685,
        2696,
      ],
      "size": 8,
      "src": 0,
      "start": 8225,
      "type": "instruction",
    },
    {
      "address": 8277,
      "instruction": "JZ",
      "label": null,
      "position": [
        2706,
        2714,
      ],
      "start": 8228,
      "type": "instruction",
    },
    {
      "instruction": "CLI",
      "label": null,
      "position": [
        2726,
        2729,
      ],
      "start": 8231,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        2739,
        2748,
      ],
      "size": 8,
      "src": 1,
      "start": 8232,
      "type": "instruction",
    },
    {
      "address": 17,
      "instruction": "OUT",
      "label": null,
      "port": "fixed",
      "position": [
        2758,
        2770,
      ],
      "size": 8,
      "start": 8235,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        2780,
        2789,
      ],
      "size": 8,
      "src": 0,
      "start": 8237,
      "type": "instruction",
    },
    {
      "address": 16,
      "instruction": "OUT",
      "label": null,
      "port": "fixed",
      "position": [
        2799,
        2811,
      ],
      "size": 8,
      "start": 8240,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        2821,
        2838,
      ],
      "size": 8,
      "src": 252,
      "start": 8242,
      "type": "instruction",
    },
    {
      "address": 33,
      "instruction": "OUT",
      "label": null,
      "port": "fixed",
      "position": [
        2848,
        2859,
      ],
      "size": 8,
      "start": 8245,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        2869,
        2882,
      ],
      "size": 8,
      "src": 10,
      "start": 8247,
      "type": "instruction",
    },
    {
      "address": 36,
      "instruction": "OUT",
      "label": null,
      "port": "fixed",
      "position": [
        2892,
        2904,
      ],
      "size": 8,
      "start": 8250,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        2914,
        2927,
      ],
      "size": 8,
      "src": 11,
      "start": 8252,
      "type": "instruction",
    },
    {
      "address": 37,
      "instruction": "OUT",
      "label": null,
      "port": "fixed",
      "position": [
        2937,
        2949,
      ],
      "size": 8,
      "start": 8255,
      "type": "instruction",
    },
    {
      "instruction": "STI",
      "label": null,
      "position": [
        2959,
        2962,
      ],
      "start": 8257,
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": "LOOP",
      "mode": "mem<-imd",
      "out": {
        "address": 4147,
        "mode": "direct",
      },
      "position": [
        2974,
        2988,
      ],
      "size": 8,
      "src": 48,
      "start": 8258,
      "type": "instruction",
    },
    {
      "address": 8258,
      "instruction": "JNZ",
      "label": null,
      "position": [
        2998,
        3006,
      ],
      "start": 8263,
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "mem<-imd",
      "out": {
        "address": 4148,
        "mode": "direct",
      },
      "position": [
        3016,
        3030,
      ],
      "size": 8,
      "src": 48,
      "start": 8266,
      "type": "instruction",
    },
    {
      "address": 8258,
      "instruction": "JNZ",
      "label": null,
      "position": [
        3040,
        3048,
      ],
      "start": 8271,
      "type": "instruction",
    },
    {
      "address": 8286,
      "instruction": "JMP",
      "label": null,
      "position": [
        3058,
        3065,
      ],
      "start": 8274,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": "ERROR",
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        3077,
        3099,
      ],
      "size": 16,
      "src": 4129,
      "start": 8277,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AL",
      "position": [
        3109,
        3124,
      ],
      "size": 8,
      "src": 16,
      "start": 8281,
      "type": "instruction",
    },
    {
      "instruction": "INT",
      "label": null,
      "position": [
        3134,
        3139,
      ],
      "start": 8284,
      "type": "instruction",
      "value": 7,
    },
    {
      "instruction": "INT",
      "label": "FIN",
      "position": [
        3149,
        3154,
      ],
      "start": 8286,
      "type": "instruction",
      "value": 0,
    },
  ],
  "success": true,
}
`;

exports[`Fixtures > should match snapshot of vocales.asm 1`] = `
{
  "data": [
    {
      "directive": "DB",
      "label": "VOCALES",
      "position": [
        49,
        64,
      ],
      "start": 4096,
      "type": "data-directive",
      "values": [
        65,
        69,
        73,
        79,
        85,
        97,
        101,
        105,
        111,
        117,
      ],
    },
    {
      "directive": "DB",
      "label": "FIN_VOCALES",
      "position": [
        93,
        97,
      ],
      "start": 4106,
      "type": "data-directive",
      "values": [
        "?",
      ],
    },
    {
      "directive": "DB",
      "label": "TEXTO",
      "position": [
        120,
        134,
      ],
      "start": 4107,
      "type": "data-directive",
      "values": [
        80,
        105,
        114,
        117,
        108,
        101,
        116,
        97,
        46,
      ],
    },
    {
      "directive": "DB",
      "label": "FIN_TEXTO",
      "position": [
        161,
        165,
      ],
      "start": 4116,
      "type": "data-directive",
      "values": [
        "?",
      ],
    },
  ],
  "instructions": [
    {
      "instruction": "MOV",
      "label": "ES_VOCAL",
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        306,
        332,
      ],
      "size": 16,
      "src": 4095,
      "start": 12288,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AH",
      "position": [
        349,
        360,
      ],
      "size": 8,
      "src": 0,
      "start": 12292,
      "type": "instruction",
    },
    {
      "instruction": "INC",
      "label": "ES_VOCAL_LOOP",
      "mode": "reg",
      "position": [
        377,
        383,
      ],
      "reg": "BX",
      "size": 16,
      "start": 12295,
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        400,
        426,
      ],
      "size": 16,
      "src": 4106,
      "start": 12297,
      "type": "instruction",
    },
    {
      "address": 12312,
      "instruction": "JZ",
      "label": null,
      "position": [
        443,
        458,
      ],
      "start": 12301,
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-mem",
      "out": "AL",
      "position": [
        475,
        487,
      ],
      "size": 8,
      "src": {
        "mode": "indirect",
      },
      "start": 12304,
      "type": "instruction",
    },
    {
      "address": 12295,
      "instruction": "JNZ",
      "label": null,
      "position": [
        504,
        521,
      ],
      "start": 12306,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "AH",
      "position": [
        538,
        550,
      ],
      "size": 8,
      "src": 255,
      "start": 12309,
      "type": "instruction",
    },
    {
      "instruction": "RET",
      "label": "ES_VOCAL_FIN",
      "position": [
        567,
        570,
      ],
      "start": 12312,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": "CANT_VOCALES",
      "mode": "reg<-imd",
      "out": "DX",
      "position": [
        757,
        766,
      ],
      "size": 16,
      "src": 0,
      "start": 12313,
      "type": "instruction",
    },
    {
      "instruction": "DEC",
      "label": "CANT_VOCALES_LOOP",
      "mode": "reg",
      "position": [
        787,
        793,
      ],
      "reg": "CX",
      "size": 16,
      "start": 12317,
      "type": "instruction",
    },
    {
      "address": 12342,
      "instruction": "JS",
      "label": null,
      "position": [
        814,
        833,
      ],
      "start": 12319,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-mem",
      "out": "AL",
      "position": [
        854,
        865,
      ],
      "size": 8,
      "src": {
        "mode": "indirect",
      },
      "start": 12322,
      "type": "instruction",
    },
    {
      "instruction": "PUSH",
      "label": null,
      "position": [
        886,
        893,
      ],
      "register": "BX",
      "start": 12324,
      "type": "instruction",
    },
    {
      "address": 12288,
      "instruction": "CALL",
      "label": null,
      "position": [
        914,
        927,
      ],
      "start": 12325,
      "type": "instruction",
    },
    {
      "instruction": "POP",
      "label": null,
      "position": [
        948,
        954,
      ],
      "register": "BX",
      "start": 12328,
      "type": "instruction",
    },
    {
      "instruction": "INC",
      "label": null,
      "mode": "reg",
      "position": [
        975,
        981,
      ],
      "reg": "BX",
      "size": 16,
      "start": 12329,
      "type": "instruction",
    },
    {
      "instruction": "CMP",
      "label": null,
      "mode": "reg<-imd",
      "out": "AH",
      "position": [
        1002,
        1010,
      ],
      "size": 8,
      "src": 0,
      "start": 12331,
      "type": "instruction",
    },
    {
      "address": 12317,
      "instruction": "JZ",
      "label": null,
      "position": [
        1031,
        1051,
      ],
      "start": 12334,
      "type": "instruction",
    },
    {
      "instruction": "INC",
      "label": null,
      "mode": "reg",
      "position": [
        1072,
        1078,
      ],
      "reg": "DX",
      "size": 16,
      "start": 12337,
      "type": "instruction",
    },
    {
      "address": 12317,
      "instruction": "JMP",
      "label": null,
      "position": [
        1099,
        1120,
      ],
      "start": 12339,
      "type": "instruction",
    },
    {
      "instruction": "RET",
      "label": "CANT_VOCALES_FIN",
      "position": [
        1141,
        1144,
      ],
      "start": 12342,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "BX",
      "position": [
        1189,
        1209,
      ],
      "size": 16,
      "src": 4107,
      "start": 8192,
      "type": "instruction",
    },
    {
      "instruction": "MOV",
      "label": null,
      "mode": "reg<-imd",
      "out": "CX",
      "position": [
        1226,
        1265,
      ],
      "size": 16,
      "src": 9,
      "start": 8196,
      "type": "instruction",
    },
    {
      "address": 12313,
      "instruction": "CALL",
      "label": null,
      "position": [
        1282,
        1299,
      ],
      "start": 8200,
      "type": "instruction",
    },
    {
      "instruction": "HLT",
      "label": null,
      "position": [
        1316,
        1319,
      ],
      "start": 8203,
      "type": "instruction",
    },
  ],
  "success": true,
}
`;
